{
    "version": 1,
    "name": "GIS",
    "maps": [
        {
            "name": "Player",
            "id": "5eddaf73-2e86-4e4c-8482-61616103e0bd",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "de67e513-b843-4d30-9609-48049d65bb6b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7fed0299-0e7e-4911-ba5a-5b0a85b52113",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "6fc401fd-55d6-4ff1-982d-8c443b9a448a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d5bb95f3-aef8-41a8-9691-5e748b3d0853",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shot",
                    "type": "Button",
                    "id": "79ea8098-9dbc-4abc-9103-95abd4e641e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchFireMode",
                    "type": "Button",
                    "id": "4d05ae9d-bab1-4be4-bfe7-5e6084b3cda0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "558bf0e6-82fe-47f3-8896-13959fc286e0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimarySlot",
                    "type": "Button",
                    "id": "61b70b3f-f195-40ab-badd-9592de668e09",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondarySlot",
                    "type": "Button",
                    "id": "76d0c9fa-a6be-447d-b4f8-83e78c2c963d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PistolSlot",
                    "type": "Button",
                    "id": "d3b02508-6b24-497f-b984-0ae290d9e9f2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuyAmmo",
                    "type": "Button",
                    "id": "54f745ce-7e64-4996-83bd-8f4bb7f6d241",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickupWeapon",
                    "type": "Button",
                    "id": "95805409-16b2-4377-89bc-e4ff26979eef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropWeapon",
                    "type": "Button",
                    "id": "c3b3d972-e7cb-46c7-b997-048b2c4c1b0c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "571736f5-fb97-43ae-b93e-f652d8655f7e",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "5919028c-7d57-429b-9b22-f0bc0319ba92",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8bde6258-419f-4338-8419-087906c58451",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2cc7b593-2b4c-4d50-a308-058a30bf02b8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a3820146-ff67-433a-8323-843734354c40",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e464c730-a11c-439e-a3e2-74d6093cac56",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "530a339b-b7fe-41c9-8481-382651be6579",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e536e033-2281-4ab4-a90c-9f6e3e9eaa45",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48a9636b-20b5-4fea-8272-eb4e35e08a76",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Shot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a26d7e2-33cd-4720-8f5d-884364ea6c84",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "SwitchFireMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "149b37d1-5219-44d4-913d-875352d0b31d",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52d83cf7-9130-4757-911a-b3ebb70f408a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "PrimarySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c4466ea-683d-4403-be6c-a5cde5c7ca66",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondarySlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3424f6b-12af-4149-91c4-30bd5a6f55f3",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "PistolSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb9e581f-c0ad-4184-a713-535c1f8c3950",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "BuyAmmo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ff193cc-effd-460a-a2eb-2562921faf94",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "PickupWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "861832fc-1cbe-4bc9-8e6f-d2e40eac0f84",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PC",
                    "action": "DropWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}